fix left on group title container on mobile view

--- a/src/assets/styles/cmps/_GroupPreview.scss
+++ b/src/assets/styles/cmps/_GroupPreview.scss
@@ -44,6 +44,12 @@
         }
       }
     }
+
+    .group-title-container {
+      position: sticky;
+      left: 80px;
+      width: 232px;
+    }
   }
 
   &:has(.collapsed) {
